--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "This is a simple package that emulates coin flips in several different ways",
   "main": "flip.js",
   "scripts": {
+    "flip": "node flip.js",
+    "flips": "node flips.js",
+    "guess": "node guess-flips.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
