--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "type": "module",
-  "name": "a02-lamngo13",
-  "version": "0.0.1",
-  "description": "This is a simple package that emulates coin flips in several different ways",
-  "main": "flip.js",
-  "scripts": {
-    "flip": "node flip.js",
-    "flips": "node flips.js",
-    "guess": "node guess-flips.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/comp426-2022-spring/a02-lamngo13.git"
-  },
-  "author": "Lam Ngo",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/comp426-2022-spring/a02-lamngo13/issues"
-  },
-  "homepage": "https://github.com/comp426-2022-spring/a02-lamngo13#readme"
-}
+    "name": "coinflipping",
+    "version": "1.0.0",
+    "type": "module",
+    "description": "Flip some coins",
+    "main": "flip.js",
+    "scripts": {
+      "flip": "node flip.js",
+      "flips": "node flips.js",
+      "guess": "node guess-flip.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/comp426-2022-spring/a02-johnmar3.git"
+    },
+    "author": "Lam Ngo",
+    "license": "GPL-3.0-or-later",
+    "bugs": {
+      "url": "https://github.com/comp426-2022-spring/a02-lamngo13/issues"
+    },
+    "homepage": "https://github.com/comp426-2022-spring/a02-lamngo13#readme",
+    "dependencies": {
+      "minimist": "^1.2.5"
+    },
+    "devDependencies": {}
+  }
+  
