--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-    "name": "coinflipping",
-    "version": "1.0.0",
-    "type": "module",
-    "description": "Flip some coins",
-    "main": "flip.js",
-    "scripts": {
-      "flip": "node flip.js",
-      "flips": "node flips.js",
-      "guess": "node guess-flip.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/comp426-2022-spring/a02-johnmar3.git"
-    },
-    "author": "Lam Ngo",
-    "license": "GPL-3.0-or-later",
-    "bugs": {
-      "url": "https://github.com/comp426-2022-spring/a02-lamngo13/issues"
-    },
-    "homepage": "https://github.com/comp426-2022-spring/a02-lamngo13#readme",
-    "dependencies": {
-      "minimist": "^1.2.5"
-    },
-    "devDependencies": {}
-  }
-  
+  "name": "coinflipping",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "Flip some coins",
+  "main": "flip.js",
+  "scripts": {
+    "flip": "node flip.js",
+    "flips": "node flips.js",
+    "guess": "node guess-flip.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/comp426-2022-spring/a02-johnmar3.git"
+  },
+  "author": "Lam Ngo",
+  "license": "GPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/comp426-2022-spring/a02-lamngo13/issues"
+  },
+  "homepage": "https://github.com/comp426-2022-spring/a02-lamngo13#readme",
+  "dependencies": {
+    "minimist": "^1.2.5",
+    "node": "^17.7.2"
+  },
+  "devDependencies": {}
+}
