--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/comp426-2022-spring/a02-lamngo13#readme",
   "dependencies": {
+    "express": "^4.17.3",
     "minimist": "^1.2.6",
     "node": "^17.7.2"
   },
